--- a/templates/create.html
+++ b/templates/create.html
@@ -63,7 +63,7 @@
         <script
             async
             src="https://telegram.org/js/telegram-widget.js?22"
-            data-telegram-login="YOUR_BOT_USERNAME"
+            data-telegram-login="TELEGRAM_TOKEN"
             data-size="large"
             data-radius="10"
             data-request-access="write"
